feat: update ip limit & expiration
